avoid input to cause an overflow

--- a/src/components/TerminalPrompt/terminalPrompt.module.css
+++ b/src/components/TerminalPrompt/terminalPrompt.module.css
@@ -23,4 +23,5 @@
   cursor: default;
   font-size: inherit;
   color: inherit;
+  min-width: 0;
 }
