--- a/src/components/TerminalTemplate/terminalTemplate.module.css
+++ b/src/components/TerminalTemplate/terminalTemplate.module.css
@@ -5,7 +5,6 @@
   height: 300px;
   transition: var(--containerTransition);
   overflow-y: auto;
-  overflow-x: hidden;
 }
 
 .containerDraggable {
